--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="widht=device-widht">
 	<title>Maquetación Básica</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 	<header class="main-header">
@@ -15,8 +18,8 @@
 
 		<nav class="main-nav">
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="contact.html">Contact</a></li>	
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="contact.html">CONTACT</a></li>	
 			</ul>
 		</nav>
 
@@ -24,7 +27,10 @@
 
 	</header>
 
-	<!-- banner -->
+				<!-- |||||| -->
+				<!-- banner -->
+				<!-- |||||| -->
+	
 	<div id="banner">
 		<div class="container">
 			<h2 class="banner-title">Regular Updates</h2>
@@ -37,9 +43,10 @@
 		</div>
 	</div>	
 
+	        <!-- |||||||||||||||||||| -->
+			<!-- productos-destacados -->
+			<!-- |||||||||||||||||||| -->
 
-
-	<!-- productos-destacados -->
 	<section class="container">
 		<article class="productos">
 			<figure>
@@ -76,17 +83,23 @@
 
 	<div class="cleaner"></div>
 
+			<!-- |||||||| -->
+			<!-- services -->
+			<!-- |||||||| -->
 
-	<!-- services -->
 	<section class="container">
-		<h2>Hostro Services</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		<article class="titulos">
+			<h2>Hostro Services</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</article>
 
-		<article>
+		<article class="left-services">
 			<ul>
 				<li>
-					<h3>Retina Ready</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto temporibus consectetur maxime placeat et in sequi animi distinctio.</p>
+					<article>
+						<h3>Retina Ready</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto temporibus consectetur maxime placeat et in sequi animi distinctio.</p>
+					</article>
 					<img src="images/ser1.png" alt="retina ready">
 				</li>
 				<li>
@@ -101,13 +114,13 @@
 			</ul>
 		</article>
 
-		<article>
+		<article class="center-phone">
 			<img src="images/iphone2.png" alt="Celular">
 		</article>
 		
-		<article>
+		<article class="right-services">
 			<ul>
-			<li>
+				<li>
 					<h3>Unlimited Colors</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto temporibus consectetur maxime placeat et in sequi animi distinctio.</p>
 					<img src="images/ser4.png" alt="retina ready">
@@ -123,129 +136,137 @@
 				</li>
 			</ul>
 		</article>
+				<div class="cleaner"></div>
 	</section>
 
-	<!-- prices -->
-	<section>
-		<article class="container">
-			<h2>Pricing Tables</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis non ab deleniti deserunt cum.</p>
+		<!-- |||||| -->
+		<!-- prices -->
+		<!-- |||||| -->
 
-			<article>
+	<section id="banner2">
+		<article class="container-price">
+				<h2>Pricing Tables</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis non ab deleniti deserunt cum.</p>
+			
+			<article class="precios">
 				<h4>Small Package</h4>
 				<h2><sup>$</sup>15<sup>.9</sup></h2>
 				<p>/month</p>
 				<table>
 					<tr>
 						<td>Hard Drive, GB</td>
-						<td>2</td>
+						<td class="numerito">2</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
-						<td>1</td>
+						<td class="numerito">1</td>
 					</tr>
 					<tr>
 						<td>Data bases</td>
-						<td>1</td>
+						<td class="numerito">1</td>
 					</tr>
 					<tr>
 						<td>Dashboards</td>
-						<td>1</td>
+						<td class="numerito">1</td>
 					</tr>
 				</table>
-				<a href="#">Select plan</a>
+				<a class="botones-precios"href="#">Select plan</a>
 			</article>
 
-			<article>
+			<article class="precios">
 				<h4>Normal Package</h4>
 				<h2><sup>$</sup>45<sup>.9</sup></h2>
 				<p>/month</p>
 				<table>
 					<tr>
 						<td>Hard Drive, GB</td>
-						<td>5</td>
+						<td class="numerito">5</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
-						<td>2</td>
+						<td class="numerito">2</td>
 					</tr>
 					<tr>
 						<td>Data bases</td>
-						<td>2</td>
+						<td class="numerito">2</td>
 					</tr>
 					<tr>
 						<td>Dashboards</td>
-						<td>2</td>
+						<td class="numerito">2</td>
 					</tr>
 				</table>
-				<a href="#">Select plan</a>
+				<a class="botones-precios"href="#">Select plan</a>
 			</article>
 
-			<article>
+			<article class="precios">
 				<h4>Big Package</h4>
 				<h2><sup>$</sup>95<sup>.9</sup></h2>
 				<p>/month</p>
 				<table>
 					<tr>
 						<td>Hard Drive, GB</td>
-						<td>12</td>
+						<td class="numerito">12</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
-						<td>5</td>
+						<td class="numerito">5</td>
 					</tr>
 					<tr>
 						<td>Data bases</td>
-						<td>5</td>
+						<td class="numerito">5</td>
 					</tr>
 					<tr>
 						<td>Dashboards</td>
-						<td>5</td>
+						<td class="numerito">5</td>
 					</tr>
 				</table>
-				<a href="#">Select plan</a>
+				<a class="botones-precios"href="#">Select plan</a>
 			</article>
 
-			<article>
+			<article class="precios">
 				<h4>Best Package</h4>
 				<h2><sup>$</sup>115<sup>.9</sup></h2>
 				<p>/month</p>
 				<table>
 					<tr>
 						<td>Hard Drive, GB</td>
-						<td>20</td>
+						<td class="numerito">20</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
-						<td>10</td>
+						<td class="numerito">10</td>
 					</tr>
 					<tr>
 						<td>Data bases</td>
-						<td>10</td>
+						<td class="numerito">10</td>
 					</tr>
 					<tr>
 						<td>Dashboards</td>
-						<td>10</td>
+						<td class="numerito">10</td>
 					</tr>
 				</table>
-				<a href="#">Select plan</a>
+				<a class="botones-precios"href="#">Select plan</a>
 			</article>
+			<div class="cleaner"></div>
 		</article>
 	</section>
 
-
+	<!-- |||||| -->
 	<!-- footer -->
+	<!-- |||||| -->
+	
 	<footer>
 		<h3>Hosting use <span>500,000</span> happy customers. Want to see services?</h3>
-		<article>
+		<article class="container-footer">
 			<article class="container">
-				<p>© 2015 Coderland. All right reserved.</p>
-				<nav>
+				<nav class="footer-nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="contact.html">Contact</a></li>	
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="contact.html">CONTACT</a></li>	
 					</ul>
 				</nav>
+				<p>© 2015 Coderland. All right reserved.</p>
+				<div class="cleaner"></div>
 			</article>
 		</article>
 	</footer>
